--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,118 @@
-name: cross-lingual-product-matching
+name: thesis_cross_lingual_product_matching
 channels:
   - defaults
 dependencies:
-  - pip=20.2.4
+  - blas=1.0=mkl
+  - ca-certificates=2021.10.26=haa95532_2
+  - certifi=2021.10.8=py39haa95532_0
+  - icc_rt=2019.0.0=h0cc432a_1
+  - intel-openmp=2021.4.0=haa95532_3556
+  - joblib=1.1.0=pyhd3eb1b0_0
+  - mkl=2021.4.0=haa95532_640
+  - mkl-service=2.4.0=py39h2bbff1b_0
+  - mkl_fft=1.3.1=py39h277e83a_0
+  - mkl_random=1.2.2=py39hf11a4ad_0
+  - nltk=3.6.5=pyhd3eb1b0_0
+  - numpy-base=1.21.2=py39h0829f74_0
+  - openssl=1.1.1l=h2bbff1b_0
+  - pip=21.2.4=py39haa95532_0
+  - python=3.9.7=h6244533_1
+  - scikit-learn=1.0.1=py39hf11a4ad_0
+  - scipy=1.7.1=py39hbe87c03_2
+  - setuptools=58.0.4=py39haa95532_0
+  - six=1.16.0=pyhd3eb1b0_0
+  - sqlite=3.36.0=h2bbff1b_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tqdm=4.62.3=pyhd3eb1b0_1
+  - tzdata=2021e=hda174b7_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.37.0=pyhd3eb1b0_1
+  - wincertstore=0.2=py39haa95532_2
   - pip:
-    - fasttext==0.9.2
-    - numpy==1.19.3
-    - pandas==1.1.0
-    - tldextract==3.0.2
-    - tqdm==4.51.0
-    - matplotlib==3.3.2
-    - nltk==3.5
-    - langdetect==1.0.8
-    - scrapy==2.4.0
-    - webdriver-manager==3.2.2
-    - selenium==3.141.0
-    - Twisted==20.3.0
-    - scrapy-fake-useragent==1.4.4
-    - scrapy_proxies==0.4
-    - sklearn
-    - torch==1.7.1
-    - transformers==4.3.1
-    - optuna==2.5.0
-    - py_entitymatching==0.4.0
+    - aiohttp==3.8.1
+    - aiosignal==1.2.0
+    - alembic==1.7.5
+    - async-timeout==4.0.1
+    - attrs==21.2.0
+    - autopage==0.4.0
+    - backcall==0.2.0
+    - cachetools==4.2.4
+    - charset-normalizer==2.0.7
+    - click==8.0.3
+    - cliff==3.9.0
+    - cloudpickle==2.0.0
+    - cmaes==0.8.2
+    - cmd2==2.3.1
+    - colorama==0.4.4
+    - colorlog==6.6.0
+    - cycler==0.11.0
+    - decorator==5.1.0
+    - filelock==3.3.2
+    - fonttools==4.28.1
+    - frozenlist==1.2.0
+    - fsspec==2021.11.0
+    - future==0.18.2
+    - google-auth==1.35.0
+    - greenlet==1.1.2
+    - huggingface-hub==0.1.2
+    - idna==3.3
+    - ipython==7.29.0
+    - jedi==0.18.1
+    - kiwisolver==1.3.2
+    - mako==1.1.6
+    - markupsafe==2.0.1
+    - matplotlib==3.5.0
+    - matplotlib-inline==0.1.3
+    - multidict==5.2.0
+    - numpy==1.21.4
+    - oauthlib==3.1.1
+    - optuna==2.10.0
+    - packaging==21.2
+    - pandas==1.3.4
+    - parso==0.8.2
+    - pbr==5.8.0
+    - pickleshare==0.7.5
+    - pillow==8.4.0
+    - prettytable==2.4.0
+    - prompt-toolkit==3.0.22
+    - protobuf==3.19.1
+    - py-entitymatching==0.4.0
+    - py-stringmatching==0.4.2
+    - py-stringsimjoin==0.3.2
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pydeprecate==0.3.1
+    - pygments==2.10.0
+    - pyparsing==2.4.7
+    - pyperclip==1.8.2
+    - pyprind==2.11.3
+    - pyreadline3==3.3
+    - python-dateutil==2.8.2
+    - pytorch-lightning==1.5.1
+    - pytorch-nlp==0.5.0
+    - pytz==2021.3
+    - pyyaml==6.0
+    - regex==2021.11.10
+    - requests==2.26.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
+    - sacremoses==0.0.46
+    - setuptools-scm==6.3.2
+    - sqlalchemy==1.4.27
+    - stevedore==3.5.0
+    - tensorboard-plugin-wit==1.8.0
+    - tokenizers==0.10.3
+    - tomli==1.2.2
+    - torch==1.10.0
+    - torch-tb-profiler==0.3.1
+    - torchmetrics==0.6.0
+    - torchvision==0.11.1
+    - traitlets==5.1.1
+    - transformers==4.12.3
+    - typing-extensions==4.0.0
+    - urllib3==1.26.7
+    - wcwidth==0.2.5
+    - werkzeug==2.0.2
+    - yarl==1.7.2
+    
